--- a/index.html
+++ b/index.html
@@ -3,34 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Product preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+  <!-- IMAGE SCETION -->
   <div class="container">
     <div class="image">
-      <img src="/images/image-product-mobile.jpg" alt="A bottle of 'CHANEL' Perfume">
     </div>
-    Perfume
 
-    Gabrielle Essence Eau De Parfum
+  <!-- HERO SCETION -->
+    <div class="container-second hero">
+      <p class="sub-title">Perfume</p>
 
-    A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-    Perfumer-Creator for the House of CHANEL.
+      <h1 class="title">Gabrielle Essence Eau De Parfum</h1>
 
-    $149.99
-    $169.99
-
-    Add to Cart
-
+      <p class="description">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+      Perfumer-Creator for the House of CHANEL.</p>
+      <div class="prices">
+        <p class="price-new">$149.99</p>
+        <p class="price-old">$169.99</p>
+      </div>
+      <button class="btn">🛒 Add to Cart</button>
+    </div>
   </div>
   
 <footer>
