--- a/index.html
+++ b/index.html
@@ -11,32 +11,34 @@
   <title>Frontend Mentor | Product preview card component</title>
 </head>
 <body>
-  <!-- IMAGE SCETION -->
-  <div class="container">
-    <div class="image">
-    </div>
+  <main>
+      <!-- IMAGE SCETION -->
+      <div class="container">
+        <div class="image">
+        </div>
 
-  <!-- HERO SCETION -->
-    <div class="container-second hero">
-      <p class="sub-title">Perfume</p>
+      <!-- HERO SCETION -->
+        <div class="container-second hero">
+          <p class="sub-title">Perfume</p>
 
-      <h1 class="title">Gabrielle Essence Eau De Parfum</h1>
+          <h1 class="title">Gabrielle Essence Eau De Parfum</h1>
 
-      <p class="description">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-      Perfumer-Creator for the House of CHANEL.</p>
-      <div class="prices">
-        <p class="price-new">$149.99</p>
-        <p class="price-old">$169.99</p>
+          <p class="description">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+          Perfumer-Creator for the House of CHANEL.</p>
+          <div class="prices">
+            <p class="price-new">$149.99</p>
+            <p class="price-old">$169.99</p>
+          </div>
+          <button class="btn">🛒 Add to Cart</button>
+        </div>
       </div>
-      <button class="btn">🛒 Add to Cart</button>
-    </div>
-  </div>
-  
-<footer>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener">Frontend Mentor</a>. 
-    Coded by <a href="https://www.frontendmentor.io/profile/MaciejChadzynski" target="_blank" rel="noopener">Maciej Chadzynski</a>.
-  </div>
-</footer>
+      
+    <footer>
+      <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener">Frontend Mentor</a>. 
+        Coded by <a href="https://www.frontendmentor.io/profile/MaciejChadzynski" target="_blank" rel="noopener">Maciej Chadzynski</a>.
+      </div>
+    </footer>
+  </main>
 </body>
 </html>
